Bug 1157579 - Make sure the visual scroll port size includes the area of scrollbars when used in TryLayout. r=tn